--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -1921,7 +1921,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "45498015",
+   "id": "15679220",
    "metadata": {},
    "outputs": [
     {
@@ -1944,7 +1944,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "3c466de3",
+   "id": "0d58e397",
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +1971,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "e32fb396",
+   "id": "31ab3987",
    "metadata": {},
    "outputs": [
     {
@@ -1994,7 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "26852f51",
+   "id": "7409af4f",
    "metadata": {},
    "outputs": [
     {
@@ -2024,7 +2024,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "d7b7e45e",
+   "id": "fff61a91",
    "metadata": {},
    "outputs": [
     {
@@ -2061,7 +2061,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "838e8d98",
+   "id": "c6ff6034",
    "metadata": {},
    "outputs": [
     {
@@ -2082,7 +2082,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "cfddcc31",
+   "id": "35c0ad20",
    "metadata": {},
    "outputs": [
     {
@@ -2107,7 +2107,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "0243b8e7",
+   "id": "e71492cb",
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2128,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "919bc877",
+   "id": "bd4024c9",
    "metadata": {},
    "outputs": [
     {
@@ -2154,8 +2154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "b48e7989",
+   "execution_count": 69,
+   "id": "5f235f23",
    "metadata": {},
    "outputs": [
     {
@@ -2189,8 +2189,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "id": "e2bf5554",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_23156/998394729.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\jlove\\AppData\\Local\\Temp/ipykernel_23156/998394729.py\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    driver_percents = 100 *\u001b[0m\n\u001b[1;37m                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the percentage of drivers for each city type.\n",
+    "driver_percents = 100 * city_data_df.groupby([\"type\"]).sum()[\"driver_count\"] / city_data_df[\"driver_count\"].sum()\n",
+    "driver_percent"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "51a6aba2",
+   "id": "1c69368d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a36135a7",
    "metadata": {},
    "outputs": [],
    "source": []
